feat: Opt out from entities
