# inbox/src/controllers/handlers/notification-opt-out/schemas.ts
@@ -1,48 +1,23 @@
 import { Schema } from 'ajv'
-import { NotificationType } from '@dcl/schemas'
-
-export type MetadataKey = 'id' | 'communityId'
+import { NotificationEntity } from '@notifications/common'
 
 export type CreateNotificationOptOutRequestBody = {
-  metadataKey: MetadataKey
-  metadataValue: string
-  notificationTypes: string[]
+  entity: NotificationEntity
+  entityId: string
 }
-
-const COMMUNITY_NOTIFICATION_TYPES = [
-  NotificationType.COMMUNITY_DELETED,
-  NotificationType.COMMUNITY_DELETED_CONTENT_VIOLATION,
-  NotificationType.COMMUNITY_RENAMED,
-  NotificationType.COMMUNITY_MEMBER_BANNED,
-  NotificationType.COMMUNITY_MEMBER_REMOVED,
-  NotificationType.COMMUNITY_REQUEST_TO_JOIN_RECEIVED,
-  NotificationType.COMMUNITY_REQUEST_TO_JOIN_ACCEPTED,
-  NotificationType.COMMUNITY_INVITE_RECEIVED,
-  NotificationType.COMMUNITY_OWNERSHIP_TRANSFERRED,
-  NotificationType.COMMUNITY_POST_ADDED
-]
 
 export const CreateNotificationOptOutSchema: Schema = {
   type: 'object',
-  required: ['metadataKey', 'metadataValue', 'notificationTypes'],
+  required: ['entity', 'entityId'],
   additionalProperties: false,
   properties: {
-    metadataKey: {
+    entity: {
       type: 'string',
-      enum: ['id', 'communityId']
+      enum: Object.values(NotificationEntity)
     },
-    metadataValue: {
+    entityId: {
       type: 'string',
       minLength: 1
-    },
-    notificationTypes: {
-      type: 'array',
-      items: {
-        type: 'string',
-        enum: COMMUNITY_NOTIFICATION_TYPES
-      },
-      minItems: 1,
-      uniqueItems: true
     }
   }
 }
